	 	>> Optimized directory scans for graphics refresh 
	 	>> Avoid multiple vault re-reading from the source log files
	 	>> Code optimizations to avoid materialization
	 	>> Remove syncing slave records for incomplete master records
	 	>> Avoid multiple sha1 hashing
	 	>> Remove method synchronizing keyword for methods not used in threads
 	* Support new file extensions separator

Version 3.3.2 - 15 Apr 2018
* fix illegal formatting option in ParameterControl used for Graupner UDP charger
* fix HoTTAdapter wrong data block number detection
* fix empty template file name if user cancels loading a template
* fix some issues when adding / editing object keys
* fix wrong interpretation and display of geo-coordinates received as degree with decimal digits
* fix parsing error with values coming with comma as separator to decimal places
* fix setting of time grid building new template
* fix circular UI update calls
* fix/tolerate Jeti new alarm protocol 
* context menu texts (graphics / data table tabs)
* add initial support for Junsi iCharger 106B
* add initial support for ELV WDE (Wetter-Daten-Empfänger)
* add initial support for a generic CSV import (using Tesla Battery sample CSV file as source)
* add initial support for Graupner GeniusWizard log files
* update MDLViewer plug-in to 9.3
* copyright update

History analysis
	* New summary chart in the history graphics window
	* Enhance graphics template support
	 	>> new default templates per object key
	 	>> new histo templates format: pls load, check and re-save user histo templates!
	 	>> show a non-default template name in the status bar
	 	>> fix record mapping for the default graphics template 
	 	>> fix saving the last template instead of saving the default
	 	>> fix empty template file name if user cancels loading a template
	* Enhance graphics chart
	 	>> background colors selection
	 	>> initial vertical lines positions in delta measurement mode